--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "open-cli http://localhost:5050/index.html && node server.js",
+    "start": "node server.js",
     "node": "nodemon server.js"
   },
   "keywords": [],
